# src/routes/abstract.routes.js
@@ -15,6 +15,5 @@ router.post(
 );
 router.get('/my', abstractController.getMyAbstracts);
 router.get('/:id', abstractController.getAbstractById);
-router.delete('/:id', abstractController.deleteAbstract);
 
 export default router;
